# pythonProject_poetry_GIT

./: .flake8  .gitignore  pyproject.toml
src/: README.md  masks.py  processing.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
